--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,17 +1,15 @@
----
-layout: default
----
 <div class="container">
-  <!-- Sidebar -->
+  <!-- Sidebar on the left -->
   {% include sidebar.html %}
 
-  <!-- Main content -->
+  <!-- Main post content -->
   <main class="main-content">
     <h1>{{ page.title }}</h1>
+    {{ content }}
     <ul>
-      {% assign cat_posts = site.categories[page.category] %}
+      {% assign cat_posts = site.categories[page.category] | sort: 'date' | reverse %}
       {% for post in cat_posts %}
-        <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+        <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a> - {{ post.date | date: "%b %d, %Y" }}</li>
       {% endfor %}
     </ul>
   </main>
