--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
     </ul>
   </div>
 
-  {% assign sorted_categories = site.categories | sort_natural: "first" %}
+  {% assign sorted_categories = site.categories | sort %}
   <div class="sidebar-section connect-section">
     <h4>Categories</h4>
     <ul class="sidebar-categories">
