--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -17,6 +17,8 @@
     <!-- Main content on the right -->
     <main class="main-content">
       <h1>{{ page.title }}</h1>
+      <p><small>By {{ page.author }} | {{ page.date | date: "%b %d, %Y" }}</small></p>
+
       {{ content }}
     </main>
   </div>
