--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,34 +4,19 @@
 
   <!-- Main content area -->
   <main class="main-content">
-    <section class="category-section">
-      <h2>Personal</h2>
-      <ul>
-        {% assign personal_posts = site.categories.Personal | sort: 'date' | reverse %}
-        {% for post in personal_posts %}
-          <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
 
-    <section class="category-section">
-      <h2>Technical</h2>
-      <ul>
-        {% assign tech_posts = site.categories.Technical | sort: 'date' | reverse %}
-        {% for post in tech_posts %}
-          <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
+    {% assign sorted_categories = site.categories | sort %}
+    {% for category in sorted_categories %}
+      <section class="category-section">
+        <h2>{{ category[0] | capitalize }}</h2>
+        <ul>
+          {% assign cat_posts = category[1] | sort: 'date' | reverse %}
+          {% for post in cat_posts %}
+            <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
+    {% endfor %}
 
-    <section class="category-section">
-      <h2>Trending</h2>
-      <ul>
-        {% assign trending_posts = site.categories.Trending | sort: 'date' | reverse %}
-        {% for post in trending_posts %}
-          <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
   </main>
 </div>
