--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -158,3 +158,45 @@
   color: #005bb5;
   text-decoration: underline;
 }
+
+/* Author Info */
+.sidebar .author-info {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.sidebar .author-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+  border: 2px solid #ddd;
+}
+
+.sidebar .author-name {
+  margin: 5px 0;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.sidebar .author-bio {
+  font-size: 0.95rem;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.sidebar .author-desc {
+  list-style-type: disc;
+  list-style-position: inside;
+  padding-left: 0;
+  margin: 0;
+}
+
+.sidebar .author-desc li {
+  font-size: 0.9rem;
+  color: #555;
+  margin-bottom: 4px;
+  line-height: 1.4;
+}
