--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,14 @@
     <!-- Main post content -->
     <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
       <h1>{{ page.title }}</h1>
-      <p><small>By {{ page.author }} | {{ page.date | date: "%b %d, %Y" }}</small></p>
+      <p><small>{{ page.desc }}</small></p>
+
+      <!-- Welcome Section -->
+      {% if page.welcome %}
+        <section class="welcome-section">
+          <p>{{ page.welcome }}</p>
+        </section>
+      {% endif %}
 
       {% assign sorted_categories = site.categories | sort %}
       {% for category in sorted_categories %}
