--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,12 +17,18 @@
     <!-- Main post content -->
     <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
       <h1>{{ page.title }}</h1>
-      <p><small>{{ page.desc }}</small></p>
 
       <!-- Welcome Section -->
       {% if page.welcome %}
         <section class="welcome-section">
           <p>{{ page.welcome }}</p>
+        </section>
+      {% endif %}
+
+      <!-- Blog Description -->
+      {% if page.desc %}
+        <section class="blog-desc">
+          <p>{{ page.desc }}</p>
         </section>
       {% endif %}
 
