--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -18,11 +18,12 @@
     <!-- Main content on the right -->
     <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
       <h1>{{ page.title }}</h1>
-      <p><small>By {{ page.author }} | {{ page.date | date: "%b %d, %Y" }}</small></p>
 
       {{ content }}
     </main>
+  </div>
 
+  <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
     <!-- Footer at the bottome -->
     {% include footer.html %}
   </div>
