--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,6 @@
 <body>
 
   <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
-    
     <!-- Sidebar on the left -->
     {% include sidebar.html %}
 
@@ -22,7 +21,9 @@
 
       {{ content }}
     </main>
-
+  </div>
+  
+  <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;"></divclass>>
     <!-- Footer at the bottome -->
     {% include footer.html %}
   </div>
