--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -23,7 +23,7 @@
     </main>
   </div>
 
-  <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
+  <div class="site-footer">
     <!-- Footer at the bottome -->
     {% include footer.html %}
   </div>
