--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
 <footer class="site-footer">
   <div class="footer-content">
-    <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
-    <ul class="footer-links">
-      <li><a href="{{ '/' | relative_url }}">Home</a></li>
-    </ul>
+    <p>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved | <a href="{{ '/' | relative_url }}">View Home</a></p>
   </div>
 </footer>
