--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <!-- Include your CSS files -->
   <link rel="stylesheet" href="{{ '/assets/css/sidebar.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/layout.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
@@ -18,15 +17,14 @@
     <!-- Main content on the right -->
     <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
       <h1>{{ page.title }}</h1>
+      <p><small>{{ page.date | date: "%b %d, %Y" }}</small></p>
 
       {{ content }}
     </main>
   </div>
 
-  <div class="site-footer">
-    <!-- Footer at the bottome -->
-    {% include footer.html %}
-  </div>
+  <!-- Footer at the bottome -->
+  {% include footer.html %}
 
 </body>
 </html>
