--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,16 +17,14 @@
     <!-- Main post content -->
     <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
       <h1>{{ page.title }}</h1>
-      <p><small>By {{ page.author }} | {{ page.date | date: "%b %d, %Y" }}</small></p>
+      <p><small>{{ page.date | date: "%b %d, %Y" }}</small></p>
 
       {{ content }}
     </main>
   </div>
   
-  <div class="site-footer">
-    <!-- Footer at the bottome -->
-    {% include footer.html %}
-  </div>
+  <!-- Footer at the bottome -->
+  {% include footer.html %}
 
 </body>
 </html>
