--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,22 +9,22 @@
   <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
 </head>
 <body>
+  <div class="container-wrapper">
+    <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
+      <!-- Sidebar on the left -->
+      {% include sidebar.html %}
 
-  <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
-    <!-- Sidebar on the left -->
-    {% include sidebar.html %}
+      <!-- Main post content -->
+      <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
+        <h1>{{ page.title }}</h1>
+        <p><small>{{ page.date | date: "%b %d, %Y" }}</small></p>
 
-    <!-- Main post content -->
-    <main class="main-content" style="flex: 1 1 65%; padding-left: 1rem;">
-      <h1>{{ page.title }}</h1>
-      <p><small>{{ page.date | date: "%b %d, %Y" }}</small></p>
+        {{ content }}
+      </main>
+    </div>
 
-      {{ content }}
-    </main>
+    <!-- Footer at the bottome -->
+    {% include footer.html %}
   </div>
-  
-  <!-- Footer at the bottome -->
-  {% include footer.html %}
-
 </body>
 </html>
