fixing footer alignment

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-  <p>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved | <a href="{{ '/' | relative_url }}">View Home</a></p>
+  <p>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved | <a href="{{ '/' | relative_url }}">Go to Home</a></p>
 </footer>
