fixing youtube link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer class="site-footer">
   <p>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved | <a href="{{ '/' | relative_url }}">Go to Home</a></p>
+  <div class="g-ytsubscribe" 
+     data-channelid="UCuDiaLK6g3niDtvIuS9Z_6w" 
+     data-layout="default" 
+     data-count="default">Subscribe</div>
 </footer>
