--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,4 +63,9 @@
       {% endif %}
     </ul>
   </div>
+  <div class="g-ytsubscribe" 
+     data-channelid="UCuDiaLK6g3niDtvIuS9Z_6w" 
+     data-layout="default" 
+     data-count="default">Subscribe
+  </div>
 </aside>
