adding banner image

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
 </head>
 <body>
-  <div class="container-wrapper">
+  <div class="container-wrapper site-banner">
     <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
       <!-- Sidebar on the left -->
       {% include sidebar.html %}
