--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/sidebar.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/layout.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/banner.css' | relative_url }}">
 </head>
 <body>
   <div class="container-wrapper site-banner">
