--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,12 @@
   <link rel="stylesheet" href="{{ '/assets/css/banner.css' | relative_url }}">
 </head>
 <body>
-  <div class="container-wrapper site-banner">
+  <div class="container-wrapper">
+    <div class="site-banner">
+      <img src="{{ '/assets/images/banner.jpg' | relative_url }}" 
+          alt="Explore, Learn, Simplify & Grow Together - @TyataEssence"
+          title="Explore, Learn, Simplify & Grow Together - @TyataEssence">
+    </div>
     <div class="container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
       <!-- Sidebar on the left -->
       {% include sidebar.html %}
