--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/css/sidebar.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/layout.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/banner.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/styles/sidebar.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/styles/layout.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/styles/banner.css' | relative_url }}">
 </head>
 
 <body>
