--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,6 +39,8 @@
           🌐
           {% elsif link_name contains 'Youtube' %}
           ▶️
+          {% elsif link_name contains 'TikTok' %}
+          🎵
           {% else %}
           🔗
           {% endif %}
